# impostor

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
impostor_cli/: Cargo.toml
impostor_cli/src/: log_middleware.rs  main.rs
impostor_cli/tests/resources/: simple_mock.hurl
impostor_compiler_axum/: Cargo.toml
impostor_compiler_axum/src/: entry.rs  error.rs  lib.rs  template.rs
impostor_compiler_axum/src/asserts/: mod.rs  predicate.rs  query.rs
impostor_core/: Cargo.toml  README.md
impostor_core/src/: lib.rs
impostor_core/src/ast/: core.rs  display.rs  json.rs  mod.rs
impostor_core/src/error/: mod.rs
impostor_core/src/parser/: base64.rs  bytes.rs  combinators.rs  cookiepath.rs  error.rs  expr.rs  filename.rs  filter.rs  json.rs  key_string.rs  mod.rs  multiline.rs  number.rs  option.rs  parsers.rs  path.rs  predicate.rs  predicate_value.rs  primitives.rs  query.rs  reader.rs  sections.rs  string.rs  template.rs  xml.rs
impostor_core/tests/: json.rs
inko_cli/: Cargo.toml
inko_cli/src/: main.rs
inko_cli/tests/: e2e.rs
inko_cli/tests/resources/: simple_mock.inko
inko_compiler_axum/: Cargo.toml
inko_compiler_axum/src/: entry.rs  error.rs  lib.rs  template.rs
inko_compiler_axum/src/asserts/: mod.rs  predicate.rs  query.rs
inko_core/: Cargo.toml  README.md
inko_core/src/: lib.rs
inko_core/src/ast/: core.rs  display.rs  json.rs  mod.rs
inko_core/src/error/: mod.rs
inko_core/src/parser/: base64.rs  bytes.rs  combinators.rs  cookiepath.rs  error.rs  expr.rs  filename.rs  filter.rs  json.rs  key_string.rs  mod.rs  multiline.rs  number.rs  option.rs  parsers.rs  path.rs  predicate.rs  predicate_value.rs  primitives.rs  query.rs  reader.rs  sections.rs  string.rs  template.rs  url.rs  xml.rs
inko_core/tests/: json.rs
samples/: tour.hurl  tour.impostor  tour_test.hurl
