[package]
edition = "2021"
name = "impostor_cli"
version = "0.1.0"

[[bin]]
name = "impostor"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
clap = {version = "4.4.11", features = ["derive"]}
env_logger = "0.10.1"
eyre = "0.6.11"
impostor_compiler_axum = {version = "0.1.0", path = "../impostor_compiler_axum"}
impostor_core = {version = "0.1.0", path = "../impostor_core"}
log = "0.4.20"
tokio = {version = "1.35.1", features = ["full"]}

[dev-dependencies]
assert_cmd = "2.0.12"
rand = "0.8.5"
