[package]
authors = ["Shrikanth Upadhayaya <shrikanth@abis.moe>", "Vaishnav Sreekanth Menon <vaishnav@abis.moe>"]
description = "Compile impostor mock files (see impostor_core) to an axum router"
documentation = "https://github.com/abismoe/impostor"
edition = "2021"
homepage = "https://github.com/abismoe/impostor"
license = "Apache-2.0"
name = "impostor_compiler_axum"
repository = "https://github.com/abismoe/impostor"
version = "0.1.0"

[dependencies]
axum = "0.7.2"
axum-extra = {version = "0.9.0", features = ["cookie"]}
impostor_core = {version = "0.1.0", path = "../impostor_core"}
regex = "1.10.2"
serde_json = "1.0.108"
serde_qs = "0.12.0"

[dev-dependencies]
tokio = {version = "1.0", features = ["full"]}
tower = {version = "0.4", features = ["util"]}
