[package]
authors = ["Shrikanth Upadhayaya <shrikanth@abis.moe>", "Vaishnav Sreekanth Menon <vaishnav@abis.moe>"]
description = "Inko Core"
documentation = "https://github.com/abismoe/inko"
edition = "2021"
homepage = "https://github.com/abismoe/inko"
license = "Apache-2.0"
name = "inko_core"
repository = "https://github.com/abismoe/inko"
version = "0.1.0"

[dependencies]
float-cmp = "0.9.0"
libxml = "0.3.3"
regex = "1.10.2"
